Update - DLPriorityQueue